# A3Claw

./: .env.example  .gitignore  AEROSPACE_GRADE_TEST_REPORT.md  AEROSPACE_PLAN.md  CLAW_TERMINAL_CHAT_ANALYSIS.md  CLAW_TERMINAL_CHAT_VERIFICATION.md  CLI_AEROSPACE_GRADE_SPEC.md  CLI_AEROSPACE_GRADE_TEST.md  CLI_AUTO_SCROLL_LAYOUT.md  CLI_BASH_INTEGRATION_DESIGN.md  CLI_NATURAL_LANGUAGE_TOOL_TEST_PLAN.md  CLI_QUICK_TEST.md  CLI_TERMINAL_TEST.md  CONTRIBUTING.md  Cargo.toml  FINAL_COMPLETION_SUMMARY.md  FINAL_TEST_RESULTS.md  IME_DEBUG_GUIDE.md  IME_ISSUE_FINAL_REPORT.md  LICENSE  MODULE_INTEGRATION_PROGRESS.md  Makefile  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKJS_COMPATIBILITY_SOLUTION.md  QUICK_MANUAL_SETUP.md  QUICK_PUBLISH.md  QUICK_START.md  QUICK_START.sh  QWEN35_9B_CONFIGURATION.md  README.md  README_ZH.md  RELEASE_CHECKLIST.md  SKILLS_BROWSER_FINAL_REPORT.md  START_UI.sh  UI_IMPROVEMENT_IMPLEMENTATION.md  ZHIPU_AI_CONFIG_SUMMARY.md  ZHIPU_AI_QUICK_START.md  benchmark_performance.sh  nl_cli_full_test.py  (+10 more)
crates/agent-executor/: Cargo.toml
crates/agent-executor/src/: bootstrap.rs  context.rs  dispatch.rs  error.rs  executor.rs  lib.rs  react.rs  session.rs  skill.rs  skill_manager.rs  skill_registry.rs
crates/agent-executor/src/builtin_tools/: apply_patch.rs  archive.rs  browser.rs  calendar_impl.rs  clawhub.rs  cron.rs  cron_scheduler.rs  data.rs  document.rs  email_impl.rs  exec.rs  heartbeat.rs  image.rs  mcp.rs  messaging.rs  mod.rs  news_fetch.rs  pdf.rs  python.rs  rag.rs  sessions.rs  ssh.rs  web_fetch.rs
crates/agent-executor/tests/: integration_gateway.rs  integration_real_data.rs
crates/assistant/: Cargo.toml  README.md
crates/assistant-test/: Cargo.toml
crates/assistant-test/src/: main.rs
crates/assistant/src/: action.rs  context.rs  intent.rs  knowledge.rs  lib.rs  response.rs
crates/assistant/tests/: integration_test.rs
crates/compat-bridge/: Cargo.toml
crates/compat-bridge/src/: lib.rs  moltis_integration.rs  wasm_runtime.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  rag.rs
crates/config/tests/: rag_integration_test.rs
crates/inference/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
crates/inference/examples/: http_backend_demo.rs  multi_backend_fallback.rs  wasi_nn_inference_demo.rs
crates/inference/src/: audit.rs  backend.rs  backend.rs.bak  backend_new.rs  circuit_breaker.rs  engine.rs  error.rs  health.rs  lib.rs  tests.rs  types.rs
crates/inference/tests/: integration_real_data.rs  wasi_nn_integration.rs
crates/intel/: Cargo.toml
crates/intel/src/: fetcher.rs  lib.rs  monitor.rs  report.rs  rss.rs  summarize.rs  task.rs
crates/intel/tests/: integration_real_data.rs
crates/plugin/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/plugin/src/: lib.rs  main.rs  router.rs  skill_registry.rs  state.rs  types.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: agent_sandbox.rs  host_funcs.rs  ipc.rs  lib.rs  main.rs  node_mock.rs  quickjs_compat.rs  runner.rs  wasi_builder.rs
crates/sandbox/tests/: integration_real_data.rs
crates/security/: Cargo.toml
crates/security/src/: agent_profile.rs  audit.rs  circuit_breaker.rs  config.rs  interceptor.rs  lib.rs  policy.rs  tests.rs  types.rs  wasm_policy.rs
crates/security/tests/: integration_real_data.rs
crates/server-manager/: Cargo.toml
crates/server-manager/src/: api.rs  lib.rs  main.rs  manager.rs  types.rs
crates/skills/array/: Cargo.toml
crates/skills/array/src/: lib.rs
crates/skills/bits/: Cargo.toml
crates/skills/bits/src/: lib.rs
crates/skills/color/: Cargo.toml
crates/skills/color/src/: lib.rs
crates/skills/compress/: Cargo.toml
crates/skills/compress/src/: lib.rs
crates/skills/convert/: Cargo.toml
crates/skills/convert/src/: lib.rs
crates/skills/crypto/: Cargo.toml
crates/skills/crypto/src/: lib.rs
crates/skills/data/: Cargo.toml
crates/skills/data/src/: lib.rs
crates/skills/datetime/: Cargo.toml
crates/skills/datetime/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: agent_manager.rs  agent_store.rs  audit_store.rs  db.rs  lib.rs  run_store.rs  types.rs
crates/storage/tests/: integration_real_data.rs
crates/store/: Cargo.toml
crates/store/src/: app.rs  cron.rs  cron.rs.backup  heartbeat.rs  lib.rs  loader.rs  main.rs  memory.rs  registry.rs  types.rs  view_ai.rs  view_bot.rs  view_chat.rs  view_dashboard.rs  view_store.rs
crates/store/src/i18n/: ar.rs  de.rs  en.rs  es.rs  fr.rs  hi.rs  it.rs  ja.rs  ko.rs  mod.rs  nl.rs  pl.rs  pt.rs  ru.rs  strings.rs  tr.rs  tw.rs  zh.rs
crates/store/tests/: integration_real_data.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  app.rs.bak  app_auto_test.rs  assistant_tools.rs  env_check.rs  icons.rs  ipc_client.rs  main.rs  markdown_parser.rs  news_tool.rs  theme.rs  tooltip_helper.rs  weather_tool.rs
crates/ui/src/i18n/: ar.rs  de.rs  en.rs  es.rs  fr.rs  hi.rs  it.rs  ja.rs  ko.rs  mod.rs  nl.rs  pl.rs  pt.rs  ru.rs  strings.rs  tr.rs  tw.rs  zh.rs
crates/ui/src/pages/: ai_chat.rs  assistant.rs  claw_terminal.rs  claw_terminal.rs.bak  cli_terminal.rs  cli_terminal_tests.rs  confirm.rs  dashboard.rs  env_check_page.rs  events.rs  general_settings.rs  general_settings_server_mgmt.rs  mod.rs  settings.rs  skills.rs  skills_test.rs
crates/ui/tests/: claw_terminal_chat_tests.rs  cli_visual_test.rs  state_persistence_test.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs  model.rs  recorder.rs  transcriber.rs
crates/voice/tests/: integration_real_data.rs
crates/wasi-nn-infer/: Cargo.toml  response.json
crates/wasi-nn-infer/src/: lib.rs  main.rs
crates/wasm-compiler/: Cargo.toml
crates/wasm-compiler/src/: adapter.rs  error.rs  lib.rs  optimizer.rs
crates/wasm-plugin/: Cargo.toml
crates/wasm-plugin/src/: abi.rs  error.rs  executor.rs  lib.rs  loader.rs  registry.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: error.rs  lib.rs  memory.rs  optimizer.rs  registry.rs
examples/hello-skill-plugin/: Cargo.toml
examples/hello-skill-plugin/src/: lib.rs
(+296 files in other folders)
