[workspace]
members = [
    "crates/sandbox",
    "crates/security",
    "crates/config",
    "crates/storage",
    "crates/assistant",
    "crates/ui",
    "crates/plugin",
    "crates/store",
    "crates/inference",
    "crates/voice",
    "crates/wasi-nn-infer",
    "crates/intel",
    "crates/agent-executor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenClaw+ Contributors"]
license = "MIT"
repository = "https://github.com/your-org/openclaw-plus"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Channels / messaging
crossbeam-channel = "0.5"
flume = "0.11"

# Async utilities
futures-util = "0.3"

# Synchronisation primitives
parking_lot = { version = "0.12" }

# UUID generation
uuid = { version = "1.7", features = ["v4"] }

# WasmEdge SDK — supported on macOS and Linux; Windows support is experimental.
# Crates that need WasmEdge declare it as optional and gate it behind the
# `wasm-sandbox` feature flag so Windows builds can skip it.
wasmedge-sdk = { version = "0.14", features = ["async", "wasi_nn"] }

# libcosmic UI
# winit_wgpu selects the correct GPU backend automatically:
#   macOS   → Metal   (via wgpu)
#   Linux   → Vulkan / OpenGL (via wgpu)
#   Windows → DX12 / Vulkan  (via wgpu)
# No per-platform feature switching is needed at this level.
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = [
    "tokio",
    "winit_wgpu",
] }

# Config
toml = "0.8"
dirs = "5.0"

# Native file/folder picker dialog
rfd = { version = "0.14", default-features = false, features = ["async-std"] }

# Crypto / hashing (for file integrity checks)
sha2 = "0.10"
hex = "0.4"

# SQLite (for storage crate)
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
