[package]
name = "compat-bridge"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ to Moltis compatibility bridge"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
# WASM runtime dependencies
wasmedge-sdk = { version = "0.13", optional = true }
wasmedge-sys = { version = "0.17", optional = true }

[features]
default = ["wasm-runtime"]
wasm-runtime = ["wasmedge-sdk", "wasmedge-sys"]

[dev-dependencies]
tokio-test = "0.4"
