[package]
name = "compat-bridge"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ to Moltis compatibility bridge"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
# WASM runtime dependencies - optional, disabled by default to avoid bindgen issues
# wasmedge-sdk = { workspace = true, optional = true }

[features]
default = []
# wasm-runtime = ["wasmedge-sdk"]  # Disabled due to bindgen issues

[dev-dependencies]
tokio-test = "0.4"
