[package]
name = "openclaw-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for OpenClaw+"
license = "MIT"
authors = ["OpenClaw+ Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
mime_guess = "2.0"
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
tempfile = "3.0"
serde_json = "1.0"
