[package]
name = "openclaw-sandbox"
version.workspace = true
edition.workspace = true
description = "WasmEdge-based sandbox runner for OpenClaw+"

[lib]
name = "openclaw_sandbox"
path = "src/lib.rs"

[[bin]]
name = "openclaw-sandbox"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
flume = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# WasmEdge — optional; requires native WasmEdge library (macOS + Linux).
# On Windows, build without --features wasm-sandbox.
wasmedge-sdk = { workspace = true, optional = true }
wasmedge-sys = { workspace = true, optional = true }
wasmedge-types = { workspace = true, optional = true }

openclaw-security = { path = "../security" }

[features]
# Full WasmEdge sandbox (macOS + Linux).
wasm-sandbox = ["wasmedge-sdk", "wasmedge-sys", "wasmedge-types"]
default = ["wasm-sandbox"]
