[package]
name = "openclaw-security"
version.workspace = true
edition.workspace = true
description = "Security policy engine and interception layer for OpenClaw+"

[lib]
name = "openclaw_security"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
flume = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
