[package]
name = "openclaw-server-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Process management
sysinfo = "0.30"

# HTTP client
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dirs = { workspace = true }
axum = "0.8.8"
