[package]
name = "openclaw-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-security = { path = "../security" }

serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
dirs        = { workspace = true }
toml        = { workspace = true }

rusqlite    = { workspace = true }

[dev-dependencies]
tempfile    = "3.8"
