[package]
name = "openclaw-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Audio I/O — pure Rust, cross-platform
cpal = "0.15"

# WAV file writing
hound = "3.5"

# whisper.cpp Rust bindings (builds whisper.cpp via cmake)
whisper-rs = { version = "0.12", features = [] }

# Home directory lookup
dirs = "5.0"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for model download
reqwest = { version = "0.12", features = [
    "stream",
    "rustls-tls",
], default-features = false }

# Progress reporting
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.8"
