[package]
name = "skill-array"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ array skill plugin — 10 array/list utility skills (wasm32-wasip1)"

[lib]
crate-type = ["cdylib"]
name = "skill_array"

[dependencies]
openclaw-plugin-sdk = { path = "../../plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
