[package]
name = "skill-bits"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ bits skill plugin — 10 bitwise/binary operation skills (wasm32-wasip1)"

[lib]
crate-type = ["cdylib"]
name = "skill_bits"

[dependencies]
openclaw-plugin-sdk = { path = "../../plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
