[package]
name = "skill-compress"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ compress skill plugin — gzip/deflate/zlib/lz4-lite/rle/run-length (wasm32-wasip1)"

[lib]
crate-type = ["cdylib"]
name = "skill_compress"

[dependencies]
openclaw-plugin-sdk = { path = "../../plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
