[package]
name = "skill-convert"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ convert skill plugin — type/format conversions (wasm32-wasip1)"

[lib]
crate-type = ["cdylib"]
name = "skill_convert"

[dependencies]
openclaw-plugin-sdk = { path = "../../plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
