[package]
name = "skill-crypto"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ crypto skill plugin — AES-128/256-GCM, ChaCha20, PBKDF2, scrypt-lite (wasm32-wasip1)"

[lib]
crate-type = ["cdylib"]
name = "skill_crypto"

[dependencies]
openclaw-plugin-sdk = { path = "../../plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
