[package]
name = "skill-data"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ data skill plugin — 10 data format conversion skills (wasm32-wasip1)"

[lib]
crate-type = ["cdylib"]
name = "skill_data"

[dependencies]
openclaw-plugin-sdk = { path = "../../plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
