[package]
name = "skill-datetime"
version = "0.1.0"
edition = "2021"
description = "OpenClaw+ datetime skill plugin — now/parse/diff/format/weekday (wasm32-wasip1)"

[lib]
crate-type = ["cdylib"]
name = "skill_datetime"

[dependencies]
openclaw-plugin-sdk = { path = "../../plugin-sdk" }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
